image height on mobile set to auto, fixed image info issue for imagesx without image info, link color in admin nav

--- a/app/assets/stylesheets/navigation.css
+++ b/app/assets/stylesheets/navigation.css
@@ -27,6 +27,7 @@ nav.secondary li a {
 	display: block;
 	margin: 0;
 	padding: 12px 14px 10px;
+	color: #000;
 }
 
 nav.secondary li.active a {
